--- a/package.json
+++ b/package.json
@@ -3,18 +3,40 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "4.5.1",
+    "@material-ui/icons": "4.5.1",
+    "@okta/jwt-verifier": "2.1.0",
+    "@okta/okta-react": "3.0.8",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "body-parser": "1.19.0",
+    "cors": "2.8.5",
+    "dotenv": "8.2.0",
+    "express": "4.17.1",
+    "final-form": "4.18.5",
+    "finale-rest": "1.0.6",
+    "lodash": "4.17.10",
+    "moment": "2.22.2",
+    "nodemon": "^2.0.15",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-final-form": "6.3.0",
+    "react-router-dom": "5.1.2",
     "react-scripts": "4.0.3",
+    "recompose": "0.30.0",
+    "sequelize": "6.6.2",
+    "sqlite3": "5.0.2",
+    "uuid": "3.3.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm-run-all --parallel watch:server start:web",
+    "start:web": "react-scripts start",
+    "start:server": "node src/server",
+    "watch:server": "nodemon --watch src/server src/server",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -34,5 +56,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "npm-run-all": "4.1.5"
   }
 }
